--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Shamil's TSMS Login Page</title>
+    <title>Shamil's Tailz Login Page</title>
   </head>
   <body>
     <div class="body-container">
@@ -31,7 +31,7 @@
               <h1>Sign In</h1>
               <input type="email" placeholder="Email" />
               <input type="password" placeholder="Password" />
-              <a href="#">Forgot your password?</a>
+              <a href="home.html">Forgot your password?</a>
               <div class="btn-grad" id="Sign-In">Sign In</div>
             </form>
           </div>
@@ -55,6 +55,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="scipt.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
